Update interactive mode

--- a/Properties/Language_Chinese.resx
+++ b/Properties/Language_Chinese.resx
@@ -143,6 +143,9 @@
   <data name="process_occupy" xml:space="preserve">
     <value>{0} 正在运行中，可能会破解失败！</value>
   </data>
+  <data name="select" xml:space="preserve">
+    <value>选择</value>
+  </data>
   <data name="Special" xml:space="preserve">
     <value>国内特供版不支持破解</value>
   </data>
@@ -153,7 +156,7 @@
     <value>支持破解</value>
   </data>
   <data name="tips" xml:space="preserve">
-    <value>拖拽 Unity.exe 或 Unity Hub.exe 到该窗口中</value>
+    <value>请选择 Unity.exe 或 Unity Hub.exe</value>
   </data>
   <data name="Unknown" xml:space="preserve">
     <value>未知</value>
