--- a/Assets/Language_English.resx
+++ b/Assets/Language_English.resx
@@ -166,6 +166,18 @@ https://www.github.com/tylearymf/UniHacker</value>
   <data name="Process_occupy" xml:space="preserve">
     <value>{0} is running and the patch may fail!</value>
   </data>
+  <data name="Revert_btn" xml:space="preserve">
+    <value>Revert</value>
+  </data>
+  <data name="Revert_Desc" xml:space="preserve">
+    <value>Do you need to remove the crack patch?</value>
+  </data>
+  <data name="Revert_fail" xml:space="preserve">
+    <value>Remove failed!</value>
+  </data>
+  <data name="Revert_success" xml:space="preserve">
+    <value>Successfully removed!</value>
+  </data>
   <data name="Select" xml:space="preserve">
     <value>Select</value>
   </data>
